# atividadefabio

./: README.md  manage.py  pyproject.toml
config/: settings.py  urls.py
core/turmas/: admin.py  apps.py  models.py  serializers.py  views.py
core/turmas/migrations/: 0001_initial.py
